[gd_scene load_steps=9 format=2]

[ext_resource path="res://demo/world.gd" type="Script" id=1]
[ext_resource path="res://scripts/zone_loader.gd" type="Script" id=2]
[ext_resource path="res://demo/player2d.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/zone_trigger.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 216, 112 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 168, 152 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 208, 120 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 208, 136 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )
player_scene = ExtResource( 3 )

[node name="ZoneLoader" type="Node2D" parent="."]
script = ExtResource( 2 )
show_debug = true

[node name="Zone01" type="Area2D" parent="ZoneLoader"]
position = Vector2( 240, 280 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
zone_path = "res://demo/zones/zone2d_01.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneLoader/Zone01"]
shape = SubResource( 1 )

[node name="Zone02" type="Area2D" parent="ZoneLoader"]
position = Vector2( 496, 128 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
zone_path = "res://demo/zones/zone2d_02.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneLoader/Zone02"]
shape = SubResource( 2 )

[node name="Zone03" type="Area2D" parent="ZoneLoader"]
position = Vector2( 768, 296 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
zone_path = "res://demo/zones/zone2d_03.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneLoader/Zone03"]
shape = SubResource( 3 )

[node name="Zone04" type="Area2D" parent="ZoneLoader"]
position = Vector2( 520, 456 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
zone_path = "res://demo/zones/zone2d_04.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneLoader/Zone04"]
shape = SubResource( 4 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingScreen" type="Panel" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
